--- a/templates/admin/metricas.html
+++ b/templates/admin/metricas.html
@@ -23,7 +23,6 @@
         </div>
       </div>
 
-      <nav>
         <a href="{{ url_for('admin.home') }}" class="nav-item active" id="Inicio">
           <i class="fas fa-chart-line icon"></i>
           <span class="text">Panel</span>
@@ -34,11 +33,11 @@
         </a>
         <a href="{{ url_for('admin.gestion_diplomados') }}" class="nav-item">
           <i class="fas fa-book icon"></i>
-          <span class="text">Gestión Diplomados</span>
+          <span class="text">Gestion Diplomados</span>
         </a>
         <a href="{{ url_for('admin.gestion_usuarios') }}" class="nav-item">
           <i class="fas fa-users icon"></i>
-          <span class="text">Gestión Usuarios</span>
+          <span class="text"> Gestion Usuarios</span>
         </a>
         <a href="{{ url_for('admin.subir_contenido') }}" class="nav-item">
           <i class="fas fa-upload icon"></i>
@@ -46,7 +45,7 @@
         </a>
         <a href="{{ url_for('admin.metricas') }}" class="nav-item">
           <i class="fas fa-chart-bar icon"></i>
-          <span class="text">Métricas</span>
+          <span class="text">Metricas</span>
         </a>
       </nav>
 
