--- a/templates/estudiante/certificados.html
+++ b/templates/estudiante/certificados.html
@@ -34,7 +34,7 @@
   
   <!-- NAVEGACIÓN PRINCIPAL -->
   <nav>
-  <a href="{{ url_for('home') }}" class="nav-item" id="Inicio">
+  <a href="{{ url_for('home') }}" class="nav-item active" id="Inicio">
     <i class="fas fa-chart-line icon"></i>
     <span class="text">Inicio</span>
   </a>
@@ -46,11 +46,12 @@
     <i class="fas fa-credit-card icon"></i>
     <span class="text">Pagos</span>
   </a>
-  <a href="{{ url_for('certificados') }}" class="nav-item active" id="certificados">
+  <a href="{{ url_for('certificados') }}" class="nav-item" id="certificados">
     <i class="fas fa-certificate icon"></i>
     <span class="text">Certificados</span>
   </a>
 </nav>
+
 
 
   <!-- FOOTER -->
