--- a/templates/estudiante/clases.html
+++ b/templates/estudiante/clases.html
@@ -43,12 +43,13 @@
         </div>
       </div>
       
-      <nav>
-  <a href="{{ url_for('home') }}" class="nav-item " id="Inicio">
+  <!-- NAVEGACIÓN PRINCIPAL -->
+  <nav>
+  <a href="{{ url_for('home') }}" class="nav-item active" id="Inicio">
     <i class="fas fa-chart-line icon"></i>
     <span class="text">Inicio</span>
   </a>
-  <a href="{{ url_for('diplomados') }}" class="nav-item active" id="diplomados">
+  <a href="{{ url_for('diplomados') }}" class="nav-item" id="diplomados">
     <i class="fas fa-book icon"></i>
     <span class="text">Diplomados</span>
   </a>
@@ -61,6 +62,7 @@
     <span class="text">Certificados</span>
   </a>
 </nav>
+
 
       <!-- FOOTER -->
       <div class="sidebar-footer">
