--- a/templates/instructor/subirContenido.html
+++ b/templates/instructor/subirContenido.html
@@ -32,7 +32,7 @@
       </div>
 
       <nav>
-        <a href="{{ url_for('home') }}" class="nav-item " id="Inicio">
+        <a href="{{ url_for('home') }}" class="nav-item active" id="Inicio">
           <i class="fas fa-chart-line icon"></i>
           <span class="text">Panel</span>
         </a>
@@ -40,11 +40,11 @@
           <i class="fas fa-book icon"></i>
           <span class="text">Mis Diplomados</span>
         </a>
-        <a href="{{ url_for('home') }}" class="nav-item" id="estudiantes">
+    <a href="{{ url_for('instructor.seguimiento_estudiantes') }}" class="nav-item">
           <i class="fas fa-users icon"></i>
           <span class="text">Estudiantes</span>
         </a>
-        <a href="{{ url_for('subirContenido') }}" class="nav-item active" id="contenido">
+        <a href="{{ url_for('subirContenido') }}" class="nav-item" id="contenido">
           <i class="fas fa-upload icon"></i>
           <span class="text">Contenido</span>
         </a>
